--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="wafkl0v" />
+
 <!--   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="wafkl0v" type="application/atom+xml" /> -->
 <!--   <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/> -->
 
@@ -53,7 +54,7 @@ var WRInitTime=(new Date()).getTime();
   </div>
 </div>
 
-<!-- ClickTale Bottom part -->
+<!-- ClickTale Bottom part
 <div id="ClickTaleDiv" style="display: none;"></div>
 <script type="text/javascript">
 if(document.location.protocol!='https:')
@@ -62,7 +63,7 @@ if(document.location.protocol!='https:')
 <script type="text/javascript">
 if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
 </script>
-<!-- ClickTale end of Bottom part -->
+ ClickTale end of Bottom part -->
 
 <!-- Google Analytics
 <script type="text/javascript">
